Inicio secion + generos

--- a/backend/interfaz/templates/interfaz/seleccionar_generos.html
+++ b/backend/interfaz/templates/interfaz/seleccionar_generos.html
@@ -323,7 +323,7 @@
         @media (max-width: 768px) {
             .grid {
                 grid-template-columns: repeat(2, 1fr);
-                gap: 25px;
+                gap: py25px;
             }
             .grid .option:nth-child(10) {
                 grid-column: span 2;
