--- a/backend/interfaz/templates/interfaz/LoginScreen.html
+++ b/backend/interfaz/templates/interfaz/LoginScreen.html
@@ -54,7 +54,8 @@
             margin-bottom: 10px;
         }
         input[type="submit"] {
-            width: 40%;
+            width: 250px;
+            max-width: 250px;
             margin: 0px auto;
             padding: 14px;
             background: linear-gradient(135deg, rgb(245, 129, 149) 0%, #b84f9f 100%);
@@ -65,7 +66,6 @@
             font-weight: bold;
             cursor: pointer;
             transition: transform 0.2s;
-
         }
         input[type="text"]:focus,
         input[type="password"]:focus,
@@ -215,27 +215,27 @@
  </head>
  <body>
     <div class="loginDiv">
-        <div><img src="static/interfaz/images/inicio/LogoMuuviews.webp" alt=""></div>
+        <div><img src="static/interfaz/imagenes/Inicio/LogoMuuviews.webp" alt=""></div>
         <h2>Iniciar Sesion o Registrarse</h2>
-        <form name="LoginUser" method="post" action="{% url 'login' %}">
-            {% csrf_token %}
-            <p>Email:</p>
-            <input type="email" name="email" placeholder="Ingrese su email" required>
-            <p>Contraseña:</p>
-            <input type="password" name="password" placeholder="Ingrese contraseña" required>
+            <form name="LoginUser" method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <p>Nombre de usuario o correo:</p>
+                <input type="text" name="userName" placeholder="Ingrese nombre de usuario" required>
+                <p>Contraseña:</p>
+                <input type="password" name="passWord" placeholder="Ingrese contraseña" required>
+                
+                <!-- Mensajes de error -->
                 {% if messages %}
-                        <ul class="messages" style = "margin:0 auto; padding:0px 5px; width:80%;  height: 50px;" >
-                            {% for message in messages %}
-                                <h4{% if message.tags %} class="{{ message.tags }}"{% endif %} style="color: red; font-size: 14px; font-weight: 300;">
-                                    {{ message }}
-                                </h4>
-                            {% endfor %}
-                        </ul>
+                    <ul class="messages">
+                        {% for message in messages %}
+                            <h4 style="color: red; font-size: 14px;">{{ message }}</h4>
+                        {% endfor %}
+                    </ul>
                 {% endif %}
+                
                 <input type="submit" value="Iniciar Sesion">
-                <a style="color: grey; margin-top: 20px;" href="{%url 'registro'%}">Crear nueva cuenta</a>
+                <a style="color: grey; margin-top: 20px;" href="{% url 'registro' %}">Crear nueva cuenta</a>
             </form>
-            
     </div>
  </body>
  </html>
