--- a/backend/interfaz/templates/interfaz/mis_favoritos.html
+++ b/backend/interfaz/templates/interfaz/mis_favoritos.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -745,5 +746,6 @@
 
         console.log('Reproductor de favoritos inicializado con', songsList.length, 'canciones');
     </script>
+    <script src="{% static 'interfaz/js/reproductor.js' %}"></script>
 </body>
 </html>
