--- a/backend/interfaz/templates/interfaz/ver_playlist.html
+++ b/backend/interfaz/templates/interfaz/ver_playlist.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -637,3 +638,4 @@
 
         console.log('Reproductor de playlist inicializado con', songsList.length, 'canciones');
     </script>
+    <script src="{% static 'interfaz/js/reproductor.js' %}"></script>
